# JuceWorkshop

./: CMakeLists.txt
01/Builds/MacOSX/: Info-VST3.plist
01/Builds/VisualStudio2015/: SimpleDelay_SharedCode.vcxproj.filters  SimpleDelay_VST3.vcxproj
01/Builds/VisualStudio2017/: SimpleDelay_SharedCode.vcxproj
01/Builds/VisualStudio2019/: SimpleDelay_SharedCode.vcxproj  SimpleDelay_SharedCode.vcxproj.filters  SimpleDelay_StandalonePlugin.vcxproj  SimpleDelay_VST3.vcxproj
02/Builds/VisualStudio2015/: SimpleDelay_StandalonePlugin.vcxproj.filters
02/Source/: PluginProcessor.cpp
03/Builds/MacOSX/: Info-AU.plist
03/Builds/VisualStudio2015/: SimpleDelay.sln
03/Builds/VisualStudio2019/: SimpleDelay.sln
03/Source/: PluginProcessor.cpp  PluginProcessor.h
04/Builds/MacOSX/: Info-Standalone_Plugin.plist
04/Builds/VisualStudio2015/: SimpleDelay_SharedCode.vcxproj
04/Builds/VisualStudio2017/: SimpleDelay_StandalonePlugin.vcxproj
04/Builds/VisualStudio2019/: SimpleDelay_SharedCode.vcxproj  SimpleDelay_StandalonePlugin.vcxproj
04/Source/: PluginProcessor.cpp
05/Builds/VisualStudio2019/: SimpleDelay_VST.vcxproj
05/Source/: PluginProcessor.cpp  PluginProcessor.h
06/Builds/LinuxMakefile/: Makefile
06/Builds/VisualStudio2015/: SimpleDelay_VST3.vcxproj.filters
06/Builds/VisualStudio2017/: SimpleDelay.sln
06/Source/: PluginProcessor.cpp  PluginProcessor.h
07/: SimpleDelay.jucer
07/Builds/VisualStudio2015/: SimpleDelay_StandalonePlugin.vcxproj  (+2 more)
07/Source/: PluginEditor.cpp
08/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
09/JuceLibraryCode/: JucePluginDefines.h
09/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
JUCE/: ChangeList.txt
Plugins/: info.txt
TestHost/Win64/: TestHost - Atalho.lnk
workspace/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
(+92 files in other folders)
